# qkd-krylov-detector

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: full_pipeline.py  loschmidt_echo.py  nanograv_validation.py  quickstart.py
qkd_krylov_detector/: __init__.py  attack_classifier.py  bb84_simulation.py  calibration.py  demo_framework.py  error_diagnostics.py  hamiltonian.py  krylov_bridge.py  krylov_framework.py  lanczos_extractor.py  loschmidt_echo.py  one_way_function.py  open_system_bridge.py  physical_bridge.py  pulsar_analysis.py  qber_simulator.py  quantum_eve.py  sidereal_filter.py  sparse_hamiltonian.py  spectral_analysis.py  template_detector.py  universality.py
tests/: test_loschmidt_echo.py  test_new_modules.py  test_package.py  test_v12_modules.py  test_v200_modules.py
